--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.5.11",
     "vue-carousel": "^0.14.0",
     "vue-material": "^1.0.0-beta-10.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.13.0"
   },
   "browserslist": [
     "> 1%",
