replace language select, add beta version parallax copter

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "vue": "^2.5.11",
     "vue-carousel": "^0.14.0",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1",
-    "vue-scrollto": "^2.13.0"
+    "vue-scrollto": "^2.13.0",
+    "vue-select": "^2.5.1"
   },
   "browserslist": [
     "> 1%",
