--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
+    "vue-anchor-router-link": "^0.7.3",
     "vue-carousel": "^0.14.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-parallaxy": "^1.1.1",
