--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "v-owl-carousel": "^1.0.7",
     "vue": "^2.5.11",
+    "vue-locale": "^0.4.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.13.0",
