--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "v-owl-carousel": "^1.0.7",
     "vue": "^2.5.11",
     "vue-material": "^1.0.0-beta-10.2",
